pa2/src/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' error ';'
   14        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID '(' error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' error error_formal_list ')' ':' TYPEID '{' expr '}' ';'

   18 formal_list: %empty
   19            | formal_list ',' formal
   20            | formal_list ',' error

   21 error_formal_list: formal_list ',' formal
   22                  | formal_list ',' error

   23 formal: OBJECTID ':' TYPEID

   24 expr: OBJECTID ASSIGN expr
   25     | expr '.' OBJECTID '(' ')'
   26     | expr '.' OBJECTID '(' expr expr_list ')'
   27     | expr '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   29     | OBJECTID '(' ')'
   30     | OBJECTID '(' expr expr_list ')'
   31     | IF expr THEN expr ELSE expr FI
   32     | WHILE expr LOOP expr POOL
   33     | '{' expr ';' expr_block_list '}'
   34     | LET let_expr
   35     | CASE expr OF case_expr case_expr_list ESAC
   36     | NEW TYPEID
   37     | ISVOID expr
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | '~' expr
   43     | expr '<' expr
   44     | expr LE expr
   45     | expr '=' expr
   46     | NOT expr
   47     | '(' expr ')'
   48     | OBJECTID
   49     | INT_CONST
   50     | STR_CONST
   51     | BOOL_CONST
   52     | '{' error ';' expr_block_list '}'

   53 let_expr: OBJECTID ':' TYPEID IN expr
   54         | OBJECTID ':' TYPEID ',' let_expr
   55         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   56         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   57         | OBJECTID error IN expr

   58 expr_block_list: %empty
   59                | expr_block_list expr ';'

   60 case_expr: OBJECTID ':' TYPEID DARROW expr ';'

   61 case_expr_list: %empty
   62               | case_expr_list case_expr

   63 expr_list: %empty
   64          | expr_list ',' expr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 14 15 16 17 25 26 27 28 29 30 47
')' (41) 9 10 14 15 16 17 25 26 27 28 29 30 47
'*' (42) 40
'+' (43) 38
',' (44) 19 20 21 22 54 56 64
'-' (45) 39
'.' (46) 25 26 27 28
'/' (47) 41
':' (58) 9 10 11 12 13 14 15 16 17 23 53 54 55 56 60
';' (59) 4 5 9 10 11 12 13 14 15 16 17 33 52 59 60
'<' (60) 43
'=' (61) 45
'@' (64) 27 28
'{' (123) 4 5 9 10 14 15 16 17 33 52
'}' (125) 4 5 9 10 14 15 16 17 33 52
'~' (126) 42
error (256) 6 13 14 15 16 17 20 22 52 57
CLASS (258) 4 5
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 53 55 57
INHERITS (263) 5
LET (264) 34
LOOP (265) 32
POOL (266) 32
THEN (267) 31
WHILE (268) 32
CASE (269) 35
ESAC (270) 35
OF (271) 35
DARROW (272) 60
NEW (273) 36
ISVOID (274) 37
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 4 5 9 10 11 12 14 15 16 17 23 27 28 36 53 54 55 56 60
OBJECTID (279) 9 10 11 12 13 14 15 16 17 23 24 25 26 27 28 29 30 48
    53 54 55 56 57 60
ASSIGN (280) 12 24 55 56
NOT (281) 46
LE (282) 44
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8, on right: 4 5 8
feature (50)
    on left: 9 10 11 12 13 14 15 16 17, on right: 8
formal_list (51)
    on left: 18 19 20, on right: 10 14 19 20 21 22
error_formal_list (52)
    on left: 21 22, on right: 17
formal (53)
    on left: 23, on right: 10 14 19 21
expr (54)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52, on right: 9 10 12 16 17 24 25
    26 27 28 30 31 32 33 35 37 38 39 40 41 42 43 44 45 46 47 53 55
    56 57 59 60 64
let_expr (55)
    on left: 53 54 55 56 57, on right: 34 54 56
expr_block_list (56)
    on left: 58 59, on right: 33 52 59
case_expr (57)
    on left: 60, on right: 35 62
case_expr_list (58)
    on left: 61 62, on right: 35 62
expr_list (59)
    on left: 63 64, on right: 26 28 30 64


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 12


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 13


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature  go to state 16


State 13

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 17


State 14

    9 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ';'
   12        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID . ':' error ';'
   14        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID . '(' ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID . '(' error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID . '(' error error_formal_list ')' ':' TYPEID '{' expr '}' ';'

    '('  shift, and go to state 18
    ':'  shift, and go to state 19


State 15

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 20


State 16

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 21

    feature  go to state 16


State 18

    9 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' error '}' ';'
   15        | OBJECTID '(' . ')' ':' TYPEID '{' error '}' ';'
   16        | OBJECTID '(' . error ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' . error error_formal_list ')' ':' TYPEID '{' expr '}' ';'

    error     shift, and go to state 22
    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal  go to state 25


State 19

   11 feature: OBJECTID ':' . TYPEID ';'
   12        | OBJECTID ':' . TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' . error ';'

    error   shift, and go to state 26
    TYPEID  shift, and go to state 27


State 20

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 22

   16 feature: OBJECTID '(' error . ')' ':' TYPEID '{' expr '}' ';'
   17        | OBJECTID '(' error . error_formal_list ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 29

    $default  reduce using rule 18 (formal_list)

    formal_list        go to state 30
    error_formal_list  go to state 31


State 23

   23 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 24

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 33


State 25

   10 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' error '}' ';'

    $default  reduce using rule 18 (formal_list)

    formal_list  go to state 34


State 26

   13 feature: OBJECTID ':' error . ';'

    ';'  shift, and go to state 35


State 27

   11 feature: OBJECTID ':' TYPEID . ';'
   12        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 36
    ';'     shift, and go to state 37


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 29

   16 feature: OBJECTID '(' error ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 38


State 30

   19 formal_list: formal_list . ',' formal
   20            | formal_list . ',' error
   21 error_formal_list: formal_list . ',' formal
   22                  | formal_list . ',' error

    ','  shift, and go to state 39


State 31

   17 feature: OBJECTID '(' error error_formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 40


State 32

   23 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 41


State 33

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'
   15        | OBJECTID '(' ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 42


State 34

   10 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' error '}' ';'
   19 formal_list: formal_list . ',' formal
   20            | formal_list . ',' error

    ')'  shift, and go to state 43
    ','  shift, and go to state 44


State 35

   13 feature: OBJECTID ':' error ';' .

    $default  reduce using rule 13 (feature)


State 36

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 59


State 37

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


State 38

   16 feature: OBJECTID '(' error ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 60


State 39

   19 formal_list: formal_list ',' . formal
   20            | formal_list ',' . error
   21 error_formal_list: formal_list ',' . formal
   22                  | formal_list ',' . error

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 23

    formal  go to state 62


State 40

   17 feature: OBJECTID '(' error error_formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 63


State 41

   23 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 23 (formal)


State 42

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 64


State 43

   10 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 65


State 44

   19 formal_list: formal_list ',' . formal
   20            | formal_list ',' . error

    error     shift, and go to state 66
    OBJECTID  shift, and go to state 23

    formal  go to state 67


State 45

   31 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 68


State 46

   34 expr: LET . let_expr

    OBJECTID  shift, and go to state 69

    let_expr  go to state 70


State 47

   32 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 71


State 48

   35 expr: CASE . expr OF case_expr case_expr_list ESAC

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 72


State 49

   36 expr: NEW . TYPEID

    TYPEID  shift, and go to state 73


State 50

   37 expr: ISVOID . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 74


State 51

   50 expr: STR_CONST .

    $default  reduce using rule 50 (expr)


State 52

   49 expr: INT_CONST .

    $default  reduce using rule 49 (expr)


State 53

   51 expr: BOOL_CONST .

    $default  reduce using rule 51 (expr)


State 54

   24 expr: OBJECTID . ASSIGN expr
   29     | OBJECTID . '(' ')'
   30     | OBJECTID . '(' expr expr_list ')'
   48     | OBJECTID .

    ASSIGN  shift, and go to state 75
    '('     shift, and go to state 76

    $default  reduce using rule 48 (expr)


State 55

   46 expr: NOT . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 77


State 56

   42 expr: '~' . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 78


State 57

   33 expr: '{' . expr ';' expr_block_list '}'
   52     | '{' . error ';' expr_block_list '}'

    error       shift, and go to state 79
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 80


State 58

   47 expr: '(' . expr ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 81


State 59

   12 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90
    ';'  shift, and go to state 91


State 60

   16 feature: OBJECTID '(' error ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 92


State 61

   20 formal_list: formal_list ',' error .
   22 error_formal_list: formal_list ',' error .

    ')'       reduce using rule 22 (error_formal_list)
    $default  reduce using rule 20 (formal_list)


State 62

   19 formal_list: formal_list ',' formal .
   21 error_formal_list: formal_list ',' formal .

    ')'       reduce using rule 21 (error_formal_list)
    $default  reduce using rule 19 (formal_list)


State 63

   17 feature: OBJECTID '(' error error_formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 93


State 64

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'
   15        | OBJECTID '(' ')' ':' TYPEID '{' . error '}' ';'

    error       shift, and go to state 94
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 95


State 65

   10 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expr '}' ';'
   14        | OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 96


State 66

   20 formal_list: formal_list ',' error .

    $default  reduce using rule 20 (formal_list)


State 67

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 68

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   31     | IF expr . THEN expr ELSE expr FI
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    THEN  shift, and go to state 97
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 69

   53 let_expr: OBJECTID . ':' TYPEID IN expr
   54         | OBJECTID . ':' TYPEID ',' let_expr
   55         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   56         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_expr
   57         | OBJECTID . error IN expr

    error  shift, and go to state 98
    ':'    shift, and go to state 99


State 70

   34 expr: LET let_expr .

    $default  reduce using rule 34 (expr)


State 71

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   32     | WHILE expr . LOOP expr POOL
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    LOOP  shift, and go to state 100
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 72

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   35     | CASE expr . OF case_expr case_expr_list ESAC
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    OF   shift, and go to state 101
    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90


State 73

   36 expr: NEW TYPEID .

    $default  reduce using rule 36 (expr)


State 74

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   37     | ISVOID expr .
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 37 (expr)


State 75

   24 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 102


State 76

   29 expr: OBJECTID '(' . ')'
   30     | OBJECTID '(' . expr expr_list ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58
    ')'         shift, and go to state 103

    expr  go to state 104


State 77

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr
   46     | NOT expr .

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 46 (expr)


State 78

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | '~' expr .
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 42 (expr)


State 79

   52 expr: '{' error . ';' expr_block_list '}'

    ';'  shift, and go to state 105


State 80

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   33     | '{' expr . ';' expr_block_list '}'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90
    ';'  shift, and go to state 106


State 81

   25 expr: expr . '.' OBJECTID '(' ')'
   26     | expr . '.' OBJECTID '(' expr expr_list ')'
   27     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr
   47     | '(' expr . ')'

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90
    ')'  shift, and go to state 107


State 82

   44 expr: expr LE . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 108


State 83

   43 expr: expr '<' . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 109


State 84

   45 expr: expr '=' . expr

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expr  go to state 110


State 85

   38 expr: expr '+' . expr
